--- a/E-Commerce_MultiTenant/Views/Shared/_LayoutNoWhiteBar.cshtml
+++ b/E-Commerce_MultiTenant/Views/Shared/_LayoutNoWhiteBar.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:@(Session["warnanavbar"].ToString())">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="min-height:100px;background-color:@(Session["warnanavbar"].ToString())">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -35,28 +35,7 @@
         </div>
     </div>
 
-    <div class="navbar navbar-inverse navbar-fixed-top" id="navbarbelow" style="min-height:60px;margin-top:7%;background-color:white;border-color:none">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-            </div>
-            <div class="navbar-collapse collapse text-center">
-                <ul class="nav navbar-nav text-center" style="margin-left:28%">
-                    <li style="color:darkslategrey;margin-left:35px;margin-right:35px">@Html.ActionLink("Produk", "Index", "Produk")</li>
-                    <li style="margin-top:15px;color:darkgrey;">|</li>
-                    <li style="color:darkslategrey;margin-left:35px;margin-right:35px">@Html.ActionLink("Cara Pesan", "About", "Home")</li>
-                    <li style="margin-top:15px;color:darkgrey;">|</li>
-                    <li style="color:darkslategrey;margin-left:35px;margin-right:35px">@Html.ActionLink("Hubungi Kami", "Contact", "Home")</li>
-                </ul>
-
-            </div>
-        </div>
-    </div>
+    
 
     @RenderBody()
     <div class="container body-content">
