--- a/Pendaftaran_Tenant/Views/Penyewa/CreateProduk2.cshtml
+++ b/Pendaftaran_Tenant/Views/Penyewa/CreateProduk2.cshtml
@@ -289,8 +289,8 @@
                                 <input type="hidden" id="hiddentam1" name="tambahan1" />
                                 <ul class="dropdown-menu scrollable-menu" role="menu" id="dropdowntam1">
 
-                                    <li><a href="#/">Ukuran XXL</a></li>
-                                    <li><a href="#/">Ukuran di atas XXL</a></li>
+                                    <li><a href="#/">XXL</a></li>
+                                    <li><a href="#/">Lebih dari XXL</a></li>
                                     <li><a href="#/">Lengan Panjang</a></li>
                                     <li><a href="#/">Raglan</a></li>
                                     <li><a href="#/">Hoodie</a></li>
@@ -310,8 +310,8 @@
                                 <input type="hidden" id="hiddentam2" name="tambahan2" />
                                 <ul class="dropdown-menu scrollable-menu" role="menu" id="dropdowntam2">
 
-                                    <li><a href="#/">Ukuran XXL</a></li>
-                                    <li><a href="#/">Ukuran di atas XXL</a></li>
+                                    <li><a href="#/">XXL</a></li>
+                                    <li><a href="#/">Lebih dari XXL</a></li>
                                     <li><a href="#/">Lengan Panjang</a></li>
                                     <li><a href="#/">Raglan</a></li>
                                     <li><a href="#/">Hoodie</a></li>
@@ -331,8 +331,8 @@
                                 <input type="hidden" id="hiddentam3" name="tambahan3" />
                                 <ul class="dropdown-menu scrollable-menu" role="menu" id="dropdowntam3">
 
-                                    <li><a href="#/">Ukuran XXL</a></li>
-                                    <li><a href="#/">Ukuran di atas XXL</a></li>
+                                    <li><a href="#/">XXL</a></li>
+                                    <li><a href="#/">Lebih dari XXL</a></li>
                                     <li><a href="#/">Lengan Panjang</a></li>
                                     <li><a href="#/">Raglan</a></li>
                                     <li><a href="#/">Hoodie</a></li>
@@ -352,8 +352,8 @@
                                 <input type="hidden" id="hiddentam4" name="tambahan4" />
                                 <ul class="dropdown-menu scrollable-menu" role="menu" id="dropdowntam4">
 
-                                    <li><a href="#/">Ukuran XXL</a></li>
-                                    <li><a href="#/">Ukuran di atas XXL</a></li>
+                                    <li><a href="#/">XXL</a></li>
+                                    <li><a href="#/">Lebih dari XXL</a></li>
                                     <li><a href="#/">Lengan Panjang</a></li>
                                     <li><a href="#/">Raglan</a></li>
                                     <li><a href="#/">Hoodie</a></li>
@@ -373,8 +373,8 @@
                                 <input type="hidden" id="hiddentam5" name="tambahan5" />
                                 <ul class="dropdown-menu scrollable-menu" role="menu" id="dropdowntam5">
 
-                                    <li><a href="#/">Ukuran XXL</a></li>
-                                    <li><a href="#/">Ukuran di atas XXL</a></li>
+                                    <li><a href="#/">XXL</a></li>
+                                    <li><a href="#/">Lebih dari XXL</a></li>
                                     <li><a href="#/">Lengan Panjang</a></li>
                                     <li><a href="#/">Raglan</a></li>
                                     <li><a href="#/">Hoodie</a></li>
