sudah bisa add carttttt

--- a/E-Commerce_MultiTenant/Views/Produk/CalculatePrice.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/CalculatePrice.cshtml
@@ -101,6 +101,10 @@
                     <td>@ViewBag.Totalhargaall</td>
                 </tr>
             </table>
+            <div class="text-center">
+                <button class="btn btn-success" onclick="location.href='@Url.Action("AddtoCart","ShoppingCart")'">Masukkan ke keranjang</button>
+
+            </div>
         </div>
     </div>
 </div>
