--- a/E-Commerce_MultiTenant/Views/Produk/CreatePesananNonPakaian.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/CreatePesananNonPakaian.cshtml
@@ -62,15 +62,15 @@
                         <hr style="max-width:670px" />
                     </div>
 
-                    <div class="row" style="margin-left:55px">
-                        <h5 style="text-align:center;margin-right:50px"><b>Jumlah per Ukuran</b></h5>
-                        <div class="text-center"><input type="text" name="jumlah" class="form-control" /></div>
+                    <div class="row" style="margin-left:15px">
+                        <h5 style="text-align:center;margin-right:50px"><b>Jumlah</b></h5>
+                        <div class="text-center" style="margin-left:39%"><input type="text" name="jumlah" class="form-control" style="max-width:100px" /></div>
                     </div>
                     <div class="row">
-                        <h5 style="text-align:center;margin-right:50px"><b>Catatan</b></h5>
-                        <textarea rows="4" class="form-control" id="deskripsi" name="catatan"></textarea>
+                        <h5 style="text-align:center;margin-right:20px"><b>Catatan</b></h5>
+                        <textarea rows="4" class="form-control" id="deskripsi" name="catatan" style="max-width:550px;margin-left:11%"></textarea>
                     </div>
-
+                    <br />
                     <div class="text-center">
                         <input type="submit" value="Hitung Biaya" style="color:white;background-color:@(Session["warnanavbar"].ToString())" class="btn text-center" />
                     </div>
