--- a/E-Commerce_MultiTenant/Views/Produk/CalculatePrice.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/CalculatePrice.cshtml
@@ -5,9 +5,12 @@
 @{
     Layout = "~/Views/Shared/_LayoutNoWhiteBar.cshtml";
 }
-<div class="container">
-   
-    <div class="col-md-12 col-xs-12" style="margin-top:5%">
+<div class="container" style="margin-top:4%">
+   <div class="text-center">
+       <h2>Perhitungan Biaya</h2>
+       <hr />
+   </div>
+    <div class="col-md-12 col-xs-12" style="margin-top:2%">
         <div class="thumbnail clearfix text-center" style="max-width:700px;width:100%;margin-left:20%">
             <br />
             <table style="border:0 solid;float:none;margin:0 auto">
@@ -15,16 +18,16 @@
                     <td>
                         <b>Bahan :</b>
                     </td>
-                    <td>
+                    <td style="padding-right:2%">
                         @Session["namabahan"].ToString()
                     </td>
-                    <td>
+                    <td style="padding-left:15px">
                         <b> Sablon :</b>
                     </td>
                     <td>
                         @Session["namasablon"].ToString()
                     </td>
-                    <td>
+                    <td  style="padding-left:15px">
                         <b>Harga Satuan :</b>
                     </td>
                     <td>
@@ -40,71 +43,74 @@
                     <th>Jumlah Harga</th>
                 </tr>
                 <tr>
-                    <td>
+                    <td align="right" style="padding-right:40px">
                         Jumlah Pesanan :
                     </td>
-                    <td>
-                        @ViewBag.Jumlahtotal &nbsp; <button class="btn btn-primary btn-xs" onclick="history.go(-1);">Ubah</button>
+                    <td  style="padding-right:40px">
+                        @ViewBag.Jumlahtotal &nbsp; 
                     </td>
-                    <td>@ViewBag.totalharga</td>
+                    <td align="right">Rp @String.Format("{0:C}", @ViewBag.totalharga) </td>
                 </tr>
                 <tr>
-                    <td>Jumlah XXL : </td>
-                    <td>
+                    <td align="right" style="padding-right:40px">Jumlah XXL : </td>
+                    <td style="padding-right:40px">
                         @ViewBag.xxl
                     </td>
-                    <td>@ViewBag.hargaxxl</td>
+                    <td align="right">Rp @String.Format("{0:C}", @ViewBag.hargaxxl) </td>
                 </tr>
                 <tr>
-                    <td>Lebih dari XXL : </td>
-                    <td>
+                    <td align="right" style="padding-right:40px">Lebih dari XXL : </td>
+                    <td style="padding-right:40px">
                         @ViewBag.lebihxxl
                     </td>
-                    <td>@ViewBag.hargalebihxxl</td>
+                    <td align="right">Rp @String.Format("{0:C}", @ViewBag.hargalebihxxl) </td>
                 </tr>
                 @if (Session["tambahan1"].ToString() != "")
                 {
                     <tr>
-                        <td>@Session["tambahan1"].ToString() : </td>
-                        <td>
+                        <td align="right" style="padding-right:40px">@Session["tambahan1"].ToString() : </td>
+                        <td style="padding-right:40px">
                             @Session["jmlhtambahan1"].ToString()
                         </td>
-                        <td>@ViewBag.tothar1</td>
+                        <td align="right">Rp @String.Format("{0:C}", @ViewBag.tothar1)</td>
                     </tr>
                 }
                 @if (Session["tambahan2"].ToString() != "")
                 {
                     <tr>
-                        <td>@Session["tambahan2"].ToString() : </td>
-                        <td>
+                        <td align="right" style="padding-right:40px">@Session["tambahan2"].ToString() : </td>
+                        <td style="padding-right:40px">
                             @Session["jmlhtambahan2"].ToString()
                         </td>
-                        <td>@ViewBag.tothar2</td>
+                        <td align="right">Rp @String.Format("{0:C}", @ViewBag.tothar2)</td>
                     </tr>
                 }
                 @if (Session["tambahan3"].ToString() != "")
                 {
                     <tr>
-                        <td>@Session["tambahan3"].ToString() : </td>
-                        <td>
+                        <td align="right" style="padding-right:40px">@Session["tambahan3"].ToString() : </td>
+                        <td style="padding-right:40px">
                             @Session["jmlhtambahan3"].ToString()
                         </td>
-                        <td>@ViewBag.tothar3</td>
+                        <td align="right">Rp @String.Format("{0:C}", @ViewBag.tothar3)</td>
                     </tr>
                 }
             </table>
             <hr />
-            <table style="border:0 solid;float:none;margin:0 auto">
+            <table style="border:0 solid;float:none;margin-left:50%">
                 <tr>
-                    <td>Total : </td>
+                    <th style="padding-right:40px">Total : </th>
                     <td></td>
-                    <td>@ViewBag.Totalhargaall</td>
+                    <th>Rp @String.Format("{0:C}", @ViewBag.Totalhargaall)</th>
                 </tr>
             </table>
+            <br />
             <div class="text-center">
+                <button class="btn btn-primary" onclick="history.go(-1);">Ubah Data Pesanan</button>
                 <button class="btn btn-success" onclick="location.href='@Url.Action("AddtoCart","ShoppingCart")'">Masukkan ke keranjang</button>
 
             </div>
+            <br />
         </div>
     </div>
 </div>
