--- a/E-Commerce_MultiTenant/Views/Produk/CreatePesananPakaian.cshtml
+++ b/E-Commerce_MultiTenant/Views/Produk/CreatePesananPakaian.cshtml
@@ -142,8 +142,9 @@
                     <br />
                     <div class="text-center">
                         <h5><b>Catatan</b></h5>
-                        <textarea rows="4" class="form-control" id="deskripsi" name="catatan"></textarea>
+                        <textarea rows="4" class="form-control" id="deskripsi" name="catatan" style="max-width:550px;margin-left:11%"></textarea>
                     </div>
+                    <br />
                     <div class="text-center">
                         <input type="submit" value="Hitung Biaya" style="color:white;background-color:@(Session["warnanavbar"].ToString())" class="btn text-center" />
                     </div>
